--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -274,7 +274,7 @@ Size=61,57
 Collapsed=0
 
 [Window][Turbosole]
-Pos=465,190
+Pos=528,224
 Size=500,600
 Collapsed=0
 
@@ -284,7 +284,7 @@ Size=294,230
 Collapsed=0
 
 [Window][Halp]
-Pos=1205,46
+Pos=1206,46
 Size=632,688
 Collapsed=0
 
@@ -301,5 +301,10 @@ Collapsed=0
 [Window][Texture importer]
 Pos=779,159
 Size=248,160
+Collapsed=0
+
+[Window][Item Editor]
+Pos=966,204
+Size=471,502
 Collapsed=0
 
