Light now still renders while game is paused - too dark otherwise, got spooped

--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -155,7 +155,8 @@
     <ClCompile Include="src\Game\GameState.cpp" />
     <ClCompile Include="src\Game\Handlers\CharacterHandler.cpp" />
     <ClCompile Include="src\Game\Handlers\ItemHandler.cpp" />
-    <ClCompile Include="src\Game\Handlers\ParticleHandler.cpp" />
+    <ClCompile Include="src\Game\Particles\ParticleEditor.cpp" />
+    <ClCompile Include="src\Game\Particles\ParticleHandler.cpp" />
     <ClCompile Include="src\LevelEditor\Interface\Windows\InfoWindow.cpp" />
     <ClCompile Include="src\LevelEditor\TileStager.cpp" />
     <ClCompile Include="src\Renderer\ShaderHandler.cpp" />
@@ -204,7 +205,8 @@
     <ClInclude Include="src\Game\GameState.h" />
     <ClInclude Include="src\Game\Handlers\CharacterHandler.h" />
     <ClInclude Include="src\Game\Handlers\ItemHandler.h" />
-    <ClInclude Include="src\Game\Handlers\ParticleHandler.h" />
+    <ClInclude Include="src\Game\Particles\ParticleEditor.h" />
+    <ClInclude Include="src\Game\Particles\ParticleHandler.h" />
     <ClInclude Include="src\LevelEditor\Interactables\ActiveTile.h" />
     <ClInclude Include="src\LevelEditor\Interface\Windows\InfoWindow.h" />
     <ClInclude Include="src\LevelEditor\Queues\ToolTileQueue.h" />
