--- a/KanskeKulSpel/imgui.ini
+++ b/KanskeKulSpel/imgui.ini
@@ -249,8 +249,8 @@ Size=500,500
 Collapsed=0
 
 [Window][Profolio, MicSec!]
-Pos=601,100
-Size=1155,223
+Pos=20,767
+Size=558,234
 Collapsed=0
 
 [Window][Example: Console]
@@ -274,7 +274,7 @@ Size=61,57
 Collapsed=0
 
 [Window][Turbosole]
-Pos=528,224
+Pos=245,206
 Size=500,600
 Collapsed=0
 
@@ -306,5 +306,25 @@ Collapsed=0
 [Window][Item Editor]
 Pos=966,204
 Size=471,502
+Collapsed=0
+
+[Window][Pickle a Particle]
+Pos=1212,229
+Size=541,479
+Collapsed=0
+
+[Window][Load me please!]
+Pos=675,303
+Size=267,189
+Collapsed=0
+
+[Window][Save me please!]
+Pos=835,196
+Size=323,159
+Collapsed=0
+
+[Window][Erase me please no!]
+Pos=839,447
+Size=263,165
 Collapsed=0
 
