--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -146,15 +146,16 @@
     <ClCompile Include="src\Game\Entities\Enemies\Enemy.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Grunt.cpp" />
     <ClCompile Include="src\Game\Entities\Entity.cpp" />
-    <ClCompile Include="src\Game\Entities\Items\Item.cpp" />
-    <ClCompile Include="src\Game\Entities\Items\ItemEditor.cpp" />
-    <ClCompile Include="src\Game\Entities\Items\Throwables\Throwable.cpp" />
+    <ClCompile Include="src\Game\Item\Item.cpp" />
+    <ClCompile Include="src\Game\Item\ItemEditor.cpp" />
+    <ClCompile Include="src\Game\Item\Throwables\Throwable.cpp" />
     <ClCompile Include="src\Game\Entities\MovingEntity.cpp" />
     <ClCompile Include="src\Game\Entities\Player.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Game\GameState.cpp" />
     <ClCompile Include="src\Game\Handlers\CharacterHandler.cpp" />
-    <ClCompile Include="src\Game\Handlers\ItemHandler.cpp" />
+    <ClCompile Include="src\Game\Item\ItemHandler.cpp" />
+    <ClCompile Include="src\Game\Interface\Recipe.cpp" />
     <ClCompile Include="src\Game\Particles\ParticleEditor.cpp" />
     <ClCompile Include="src\Game\Particles\ParticleHandler.cpp" />
     <ClCompile Include="src\LevelEditor\Interface\Windows\InfoWindow.cpp" />
@@ -196,15 +197,17 @@
     <ClInclude Include="src\Game\Entities\Enemies\Enemy.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Grunt.h" />
     <ClInclude Include="src\Game\Entities\Entity.h" />
-    <ClInclude Include="src\Game\Entities\Items\Item.h" />
-    <ClInclude Include="src\Game\Entities\Items\ItemEditor.h" />
-    <ClInclude Include="src\Game\Entities\Items\Throwables\Throwable.h" />
+    <ClInclude Include="src\Game\Item\Item.h" />
+    <ClInclude Include="src\Game\Item\ItemEditor.h" />
+    <ClInclude Include="src\Game\Interface\Recipe.h" />
+    <ClInclude Include="src\Game\Item\RecipeEditor.h" />
+    <ClInclude Include="src\Game\Item\Throwables\Throwable.h" />
     <ClInclude Include="src\Game\Entities\MovingEntity.h" />
     <ClInclude Include="src\Game\Entities\Player.h" />
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Game\GameState.h" />
     <ClInclude Include="src\Game\Handlers\CharacterHandler.h" />
-    <ClInclude Include="src\Game\Handlers\ItemHandler.h" />
+    <ClInclude Include="src\Game\Item\ItemHandler.h" />
     <ClInclude Include="src\Game\Particles\ParticleEditor.h" />
     <ClInclude Include="src\Game\Particles\ParticleHandler.h" />
     <ClInclude Include="src\LevelEditor\Interactables\ActiveTile.h" />
