--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -198,6 +198,7 @@
     <ClInclude Include="src\Game\Entities\Enemies\Enemy.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Grunt.h" />
     <ClInclude Include="src\Game\Entities\Entity.h" />
+    <ClInclude Include="src\Game\Item\GatherItem.h" />
     <ClInclude Include="src\Game\Item\Item.h" />
     <ClInclude Include="src\Game\Item\ItemEditor.h" />
     <ClInclude Include="src\Game\Interface\Recipe.h" />
