--- a/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj.filters
@@ -383,6 +383,9 @@
     <ClInclude Include="src\Game\Collision\Collider.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="src\Game\Item\GatherItem.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <None Include="src\Data\LoadList.mop" />
