--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -142,6 +142,7 @@
     <ClCompile Include="..\External\Include\Imgui\SFML-imgui\imgui-SFML.cpp" />
     <ClCompile Include="src\Game\Collision\Collider.cpp" />
     <ClCompile Include="src\Game\Collision\CollisionHandler.cpp" />
+    <ClCompile Include="src\Game\Components\HealthComp.cpp" />
     <ClCompile Include="src\Game\Components\SpellComp.cpp" />
     <ClCompile Include="src\Game\Entities\AnimatedEntity.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Bird.cpp" />
@@ -200,6 +201,7 @@
     <ClInclude Include="src\Game\Collision\Collider.h" />
     <ClInclude Include="src\Game\Collision\CollisionHandler.h" />
     <ClInclude Include="src\Game\Collision\Explosion.h" />
+    <ClInclude Include="src\Game\Components\HealthComp.h" />
     <ClInclude Include="src\Game\Components\SpellComp.h" />
     <ClInclude Include="src\Game\Entities\AnimatedEntity.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Bird.h" />
