--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -140,15 +140,16 @@
     <ClCompile Include="..\External\Include\Imgui\imgui_widgets.cpp" />
     <ClCompile Include="..\External\Include\Imgui\misc\cpp\imgui_stdlib.cpp" />
     <ClCompile Include="..\External\Include\Imgui\SFML-imgui\imgui-SFML.cpp" />
-    <ClCompile Include="src\Game\Collision\Collider.cpp" />
     <ClCompile Include="src\Game\Collision\CollisionHandler.cpp" />
+    <ClCompile Include="src\Game\Components\AnimatedSpriteComp.cpp" />
+    <ClCompile Include="src\Game\Components\ColliderComp.cpp" />
     <ClCompile Include="src\Game\Components\HealthComp.cpp" />
+    <ClCompile Include="src\Game\Components\MovementComp.cpp" />
     <ClCompile Include="src\Game\Components\SpellComp.cpp" />
-    <ClCompile Include="src\Game\Entities\AnimatedEntity.cpp" />
+    <ClCompile Include="src\Game\Components\SpriteComp.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Bird.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Enemy.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Grunt.cpp" />
-    <ClCompile Include="src\Game\Entities\Entity.cpp" />
     <ClCompile Include="src\Game\Item\Item.cpp" />
     <ClCompile Include="src\Game\Item\ItemEditor.cpp" />
     <ClCompile Include="src\Game\Item\ProjectileHandler.cpp" />
@@ -157,7 +158,6 @@
     <ClCompile Include="src\Game\Item\Spell\Spell.cpp" />
     <ClCompile Include="src\Game\Item\Spell\Tome.cpp" />
     <ClCompile Include="src\Game\Item\Throwables\Throwable.cpp" />
-    <ClCompile Include="src\Game\Entities\MovingEntity.cpp" />
     <ClCompile Include="src\Game\Entities\Player.cpp" />
     <ClCompile Include="src\Game\Game.cpp" />
     <ClCompile Include="src\Game\GameState.cpp" />
@@ -200,12 +200,15 @@
     <ClCompile Include="src\Renderer\Renderer.cpp" />
   </ItemGroup>
   <ItemGroup>
-    <ClInclude Include="src\Game\Collision\Collider.h" />
     <ClInclude Include="src\Game\Collision\CollisionHandler.h" />
     <ClInclude Include="src\Game\Collision\Explosion.h" />
+    <ClInclude Include="src\Game\Components\AnimatedSpriteComp.h" />
+    <ClInclude Include="src\Game\Components\ColliderComp.h" />
     <ClInclude Include="src\Game\Components\HealthComp.h" />
+    <ClInclude Include="src\Game\Components\MovementComp.h" />
     <ClInclude Include="src\Game\Components\SpellComp.h" />
-    <ClInclude Include="src\Game\Entities\AnimatedEntity.h" />
+    <ClInclude Include="src\Game\Components\SpriteComp.h" />
+    <ClInclude Include="src\Game\Entities\Collidable.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Bird.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Bosses\FishMonger.h" />
     <ClInclude Include="src\Game\Entities\Enemies\Enemy.h" />
@@ -221,7 +224,6 @@
     <ClInclude Include="src\Game\Item\Spell\Spell.h" />
     <ClInclude Include="src\Game\Item\Spell\Tome.h" />
     <ClInclude Include="src\Game\Item\Throwables\Throwable.h" />
-    <ClInclude Include="src\Game\Entities\MovingEntity.h" />
     <ClInclude Include="src\Game\Entities\Player.h" />
     <ClInclude Include="src\Game\Game.h" />
     <ClInclude Include="src\Game\GameState.h" />
