--- a/KanskeKulSpel/KanskeKulSpel.vcxproj
+++ b/KanskeKulSpel/KanskeKulSpel.vcxproj
@@ -149,6 +149,7 @@
     <ClCompile Include="src\Game\Components\SpriteComp.cpp" />
     <ClCompile Include="src\Game\Entities\Chain.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Bird.cpp" />
+    <ClCompile Include="src\Game\Entities\Enemies\Bosses\FishMonger.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Enemy.cpp" />
     <ClCompile Include="src\Game\Entities\Enemies\Grunt.cpp" />
     <ClCompile Include="src\Game\Item\Item.cpp" />
